- made openApi generate only API without Controllers; - created new DTOs for Paging for Teams and Cards get methods and endpoints;
